# bulk-examples-generator

./: .gitignore  Cargo.toml  LICENSE  README.md  WritingGrammars.md
benches/: basic_generation.rs
src/: lib.rs  main.rs
src/config/: default.toml  executor.rs  generator.rs  mod.rs
src/generator/: mod.rs
tests/: mod.rs
